--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>cinnamon</groupId>
     <artifactId>functionVisualizer</artifactId>
-    <version>3.0</version>
+    <version>4.0</version>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>11</maven.compiler.source>
@@ -14,6 +14,10 @@
         <repository>
             <id>com.expression.parser</id>
             <url>file://${project.basedir}/lib</url>
+        </repository>
+        <repository>
+            <id>Enonic</id>
+            <url>https://repo.enonic.com/public/</url>
         </repository>
     </repositories>
 
@@ -33,6 +37,11 @@
             <groupId>com.expression.parser</groupId>
             <artifactId>com.expression.parser</artifactId>
             <version>2.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>31.1-jre</version>
         </dependency>
     </dependencies>
     <build>
